<resources>
    <string name="app_name">XSpace</string>

    <string name="hello_world">Hello world!</string>
    <string name="just_java">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">1</string>
    <string name="order">Order</string>
    <string name="greeting_text">Welcome to XSpace!\nWe change the world http://developer.android.com/reference/android/widget/TextView.html</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="button_send">Send</string>
    <string name="title_activity_calculate">Calculate</string>
    <string name="title_activity_android_sqlite">AndroidSQLite</string>
    <string name="SQLiteDemo">SQLiteDemo</string>
    <string name="create_data">Create Data</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="ContactList">ContactList</string>

</resources>
