<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="1" android:showAsAction="never" />
    <item android:id="@+id/action_profile" android:title="@string/action_profile"
        android:orderInCategory="2" android:showAsAction="never" />
    <item android:id="@+id/action_justjava" android:title="@string/just_java"
        android:orderInCategory="3" android:showAsAction="never"
        android:onClick="gotoJustJava"/>
    <item android:id="@+id/action_SQLite_demo" android:title="@string/SQLiteDemo"
        android:orderInCategory="4" android:showAsAction="never"
        android:onClick="gotoSQLiteDemo"/>
    <item android:id="@+id/action_json_contact_list" android:title="@string/ContactList"
        android:orderInCategory="4" android:showAsAction="never"
        android:onClick="gotoContactList"/>
</menu>
